kustomize-app/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kustomize-prod
  labels:
    env: production
